# classic_flask_api

./: .gitignore  README.md  requirements.txt  setup.cfg  setup.py  yoyo.ini
classic_api/: config.py  settings.py
classic_api/migrations/: 001_create_users_table.py
classic_api/models/: base.py  users.py
docs/: setup_database.md
