[metadata]
name = deepl
version = file: VERSION
author = Kristina Kurhanska
author_email = kristinaholmovskaa@gmail.com
description = Classic Flask API example
long_description = file: README.md

[options]
include_package_data = True
packages = find:
zip_safe = True
python_requires = >= 3.9
install_requires =
    requests            == 2.26.0
    pyjwt               == 2.1.0
    falcon              == 3.0.1
    falcon-cors         == 1.1.7
    gunicorn            == 20.1.0
    ujson               == 4.1.0
    urllib3             == 1.26.6
    attrs               == 20.3.0
    python-dotenv       == 0.19.0
